--- a/style/style.css
+++ b/style/style.css
@@ -46,18 +46,31 @@ body{
     font-size: 1.25rem;
     font-weight: 500;
 }
+
 #home{
     color: #FEA301;
     font-weight: 700;
 }
+#home:hover{
+    color: black;
+}
 #about{
     color: #01ACFD;
+}
+#about:hover{
+    color: black;
 }
 #facilities{
     color: #05D4DF;
 }
+#facilities:hover{
+    color: black;
+}
 #admission{
     color: #5D58EF;
+}
+#admission:hover{
+    color: black;
 }
 #contact-btn{
     font-size: 1.25rem;
@@ -68,6 +81,11 @@ body{
     border: none;
     border-radius: 12px;
     font-family: quicksand;
+    cursor: pointer;
+}
+#contact-btn:hover{
+    color: #FEA301;
+    background-color: #FFFFFF;
 }
 svg{
     display: none;
@@ -108,15 +126,28 @@ svg{
     padding: 10px 50px;
     border: none;
     font-family: quicksand;
+    cursor: pointer;
+}
+.banner-content button:hover{
+    color: #111111;
+    background-color: #FFFFFF;
+}
+.banner-img{
+    max-width: 469px;
 }
 .banner-img img{
     max-width: 100%;
 }
-svg{
-    width: 5%;
-}
 @media screen and (max-width:576px) {
-    .navbar ul, button, h2{
+
+    .navbar h2{
+        display: none;
+    }
+    .navbar ul{
+        display: none;
+    }
+
+    .navbar button{
         display: none;
     }
     .banner{
@@ -125,6 +156,8 @@ svg{
         align-items: center;
         text-align: center;
     }
-
+    .banner-content h1{
+        font-size: 2.5rem;
+    }
 
 }
