--- a/style/style.css
+++ b/style/style.css
@@ -83,6 +83,9 @@ body{
     font-family: quicksand;
     cursor: pointer;
 }
+#menu-icon{
+    display: none;
+}
 #contact-btn:hover{
     color: #FEA301;
     background-color: #FFFFFF;
@@ -138,7 +141,130 @@ svg{
 .banner-img img{
     max-width: 100%;
 }
+.classes{
+    background-image: url(../assets/bg.png);
+    background-size: 100%;
+}
+.classes h2{
+    font-size: 2.9rem;
+    font-weight: 700;
+    color: #000000;
+    text-align: center;
+    margin-top: 60px;
+    margin-bottom: 80px;
+}
+.card-sec{
+    display: flex;
+    gap: 30px;
+    justify-content: space-between;
+}
+.card1{
+    padding: 40px;
+    max-width: 300px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    border: 1px solid #D8EEF8;
+    border-radius: 19px;
+    box-shadow:0px 0px 5px #255e8f11;
+    background: linear-gradient(180deg, #DEF5FF, #FFFFFF);
+    }
+.card2{
+    padding: 40px;
+    max-width: 300px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    border: 1px solid #F8EDD6;
+    border-radius: 19px;
+    box-shadow:0px 0px 5px #255e8f11;
+    background: linear-gradient(180deg, #FFF4DC, #FFFFFF);
+
+}  
+
+.card3{
+    padding: 40px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    border: 1px solid #ECE3F9;
+    border-radius: 19px;
+    box-shadow:0px 0px 5px #255e8f11;
+    background: linear-gradient(180deg, #EEE1FF, #FFFFFF);
+    }
+
+.card1 img, .card2 img, .card3 img{
+    width: 100px;
+}
+.card1 h4, .card2 h4, .card3 h4{
+    font-size: 1.25rem;
+    font-weight: 700;
+    color: #202020;
+    margin-top: 33px;
+    margin-bottom: 33px;
+}
+.card1 p, .card2 p, .card3 p{text-align: center;
+    font-size: 0.9rem;
+    font-weight: 500;
+    color: #808080;
+}
+.card1 button{
+    font-size: 1rem;
+    font-weight: 700;
+    color: #64C8FF;
+    border: none;
+    margin-top: 38px;
+    background: none;
+
+}
+.card2 button{
+    font-size: 1rem;
+    font-weight: 700;
+    color: #F0AA00;
+    border: none;
+    margin-top: 38px;
+    background: none;
+
+}
+.card3 button{
+    font-size: 1rem;
+    font-weight: 700;
+    color: #8700FF;
+    border: none;
+    margin-top: 38px;
+    background: none;
+
+}
+.btn{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+    border: none;
+    margin-top: 80px;
+    margin-bottom: 60px;
+}
+.btn button{
+    border: none;
+    background-color: #FEA301;
+    height: 60px;
+    width: 60px;
+    border-radius: 50%;
+    
+   
+}
+.arrow i{
+    font-size: 25px;
+    color: #FFFFFF;
+    
+    
+    
+}
+
 @media screen and (max-width:576px) {
+    .navbar{
+        border-bottom: 1px solid #FEA301;
+    }
 
     .navbar h2{
         display: none;
@@ -150,6 +276,9 @@ svg{
     .navbar button{
         display: none;
     }
+    #menu-icon{
+        display: inline;
+    }
     .banner{
         margin: 0 auto;
         flex-direction: column-reverse;
@@ -158,6 +287,10 @@ svg{
     }
     .banner-content h1{
         font-size: 2.5rem;
+    }
+    .card-sec{
+        flex-direction: column;
+        justify-content: center;
     }
 
 }
