--- a/style/style.css
+++ b/style/style.css
@@ -434,17 +434,10 @@ svg{
         display: none;
     }
     .small-card{
-        max-width: 400px;
+        width: 90vw;
         display: grid;
         grid-template-columns: repeat(2, 1fr);
         justify-items: center;
-    }
-    .stories-card-sec{
-        max-width: 60vw;
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
     }
     .stories-content{
         margin-top: -39px;
