--- a/style/style.css
+++ b/style/style.css
@@ -413,9 +413,6 @@ svg{
     display: flex;
     justify-content: space-around;
 }
-.logo-sec{
-    width: 400px;
-}
 .logo-title{
     display: flex;
     align-items: center;
@@ -437,6 +434,7 @@ svg{
     font-size: 1.25rem;
     color: white;
     font-weight: 400;
+    margin-top: 30px;
 }
 .about-sec > h4{
     color: white;
