--- a/style/style.css
+++ b/style/style.css
@@ -1,7 +1,7 @@
-
-
+/* google font */
 @import url('https://fonts.googleapis.com/css2?family=Fira+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Quicksand:wght@300..700&family=Raleway:ital,wght@0,100..900;1,100..900&family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap');
 
+/* root */
 *{
     margin: 0px;
     padding: 0px;
@@ -13,15 +13,8 @@ body{
     background-color: #F7F7F7;
     font-family: quicksand;
 }
-marquee{
-    max-width: 80vw;
-    margin: 20px auto;
-    display: flex;
-    color: #808080;
-    font-size: 1.25rem;
-    font-weight: 600;
 
-}
+/* nav section */
 .navbar{
     display: flex;
     justify-content: space-between;
@@ -104,6 +97,19 @@ marquee{
 svg{
     display: none;
 }
+
+/* marquee */
+marquee{
+    max-width: 80vw;
+    margin: 20px auto;
+    display: flex;
+    color: #808080;
+    font-size: 1.25rem;
+    font-weight: 600;
+
+}
+
+/* banner section */
 .banner{
     max-width: 80vw;
     margin: 0 auto;
@@ -154,6 +160,8 @@ svg{
 .banner-img img{
     max-width: 100%;
 }
+
+/* Curriculum section */
 .classes{
     max-width: 80vw;
     margin: 0 auto;
@@ -288,6 +296,8 @@ svg{
     
     
 }
+
+/* stories section */
 .stories{
     display: flex;
     flex-direction: column;
@@ -414,6 +424,8 @@ svg{
 .response{
     display: none;
 }
+
+/* footer section */
 #footer{
     background-color: #01ACFD;
     padding-top: 100px;
@@ -481,6 +493,7 @@ svg{
     margin-right: 5px;
     margin-left: 5px;
 }
+/* responsive for mobile device */
 @media screen and (max-width:576px) {
     .navbar{
         border-bottom: 1px solid #FEA301;
@@ -511,6 +524,9 @@ svg{
         text-align: center;
     }
     .banner-content h1{
+        font-size: 2.5rem;
+    }
+    .classes h2, .stories-heading{
         font-size: 2.5rem;
     }
     .classes{
